--- a/cw1/index.html
+++ b/cw1/index.html
@@ -11,13 +11,11 @@
 <body>
 <h1>Widoki</h1>
 <h2>tekst</h2>
-<!-- <input type="number" class="liczba">
-<input type="button" class="przycisk" onclick=>
-<div class="klasa">tekst</div> -->
+
 <main class="main2">
     <div class="lefftArr">&lAarr;</div>
-    <div class="content">ZDJĘCIE
-      
+    <div class="content">
+      <img src="Image/1.webp" alt="widok">
     </div>
     <div class="rightArr">&rAarr;</div>
 </main>  
