--- a/cw1/index.html
+++ b/cw1/index.html
@@ -10,15 +10,16 @@
 </head>
 <body>
 <h1>Widoki</h1>
-<h2>tekst</h2>
+<h2>Zdjęcie nr. 1 </h2>
 
 <main class="main2">
     <div class="lefftArr">&lAarr;</div>
     <div class="content">
-      <img src="Image/1.webp" alt="widok">
+           <img class="obraz" src="Image/1.webp" alt="widok">
     </div>
     <div class="rightArr">&rAarr;</div>
 </main>  
 <footer>Copyright &copy; 2022</footer>
+
 </body>
 </html>
