--- a/cw1/index.html
+++ b/cw1/index.html
@@ -18,7 +18,14 @@
            <img class="obraz" src="Image/1.webp" alt="widok">
     </div>
     <div class="rightArr">&rAarr;</div>
-</main>  
+    
+</main> 
+<div class="box1">
+<a  class="div1">1</a>
+<a  class="div1">2</a>
+<a  class="div1">3</a>
+</div>
+
 <footer>Copyright &copy; 2022</footer>
 
 </body>
