--- a/cw1/index.html
+++ b/cw1/index.html
@@ -21,9 +21,9 @@
     
 </main> 
 <div class="box1">
-<a  class="div1">1</a>
-<a  class="div1">2</a>
-<a  class="div1">3</a>
+<a  class="div1" onclick="mojaFunkcja(0)">1</a>
+<a  class="div1" onclick="mojaFunkcja(1)">2</a>
+<a  class="div1" onclick="mojaFunkcja(2)">3</a>
 </div>
 
 <footer>Copyright &copy; 2022</footer>
