--- a/cw1/index.html
+++ b/cw1/index.html
@@ -9,24 +9,22 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-<h1>Widoki</h1>
-<h2>Zdjęcie nr. 1 </h2>
-
-<main class="main2">
-    <div class="lefftArr">&lAarr;</div>
-    <div class="content">
-           <img class="obraz" src="Image/1.webp" alt="widok">
-    </div>
-    <div class="rightArr">&rAarr;</div>
-    
-</main> 
-<div class="box1">
-<a  class="div1" onclick="mojaFunkcja(0)">1</a>
-<a  class="div1" onclick="mojaFunkcja(1)">2</a>
-<a  class="div1" onclick="mojaFunkcja(2)">3</a>
-</div>
-
-<footer>Copyright &copy; 2022</footer>
-
+    <main class="front">
+        <h1>Widoki</h1>
+        <h2>Zdjęcie nr. 1 </h2>
+            <main class="main2">
+                <div class="lefftArr">&lAarr;</div>
+                 <div class="content">
+                  <img class="obraz" src="Image/1.webp" alt="widok">
+                 </div>
+                <div class="rightArr">&rAarr;</div>
+    </main> 
+ <div class="box1">
+    <a  class="div1" onclick="takeImg(0)">1</a>
+    <a  class="div1" onclick="takeImg(1)">2</a>
+    <a  class="div1" onclick="takeImg(2)">3</a>
+ </div>
+    <footer>Copyright &copy; 2022</footer>
+</main>
 </body>
 </html>
